[tool.poetry]
name = "rent_or_buy"
version = "0.1.0"
description = ""
authors = ["Shaanan Cohney <shaananc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
